[package]
name = "imageconverter"
version = "0.1.0"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magick_rust = "0.14.0"
imagepipe = "0.3.5"
rawloader = "0.36.2"
image = "0.23.9"
clap = "2.33.3"
rayon = "1.3.1"
glob = "0.3.0"
error-chain = "0.12.4"